jena-shex/src/test/files/spec/negativeSyntax/shapename-a.shex
# keyword a as shape name
# source: turtle-syntax-bad-kw-02.ttl
a {
   <http://a.example/p1> .
}
